2005-04-24  Tom Tromey  <tromey@redhat.com>

	* include/jni_md-x86-linux-gnu.h (JNIIMPORT): New define.
	(jsize): New typedef.
	* include/jni.h: Re-merged with libgcj.
	* doc/vmintegration.texinfo (JNI Implementation): New node.
	* NEWS: Document the change.

2005-04-24  Tom Tromey  <tromey@redhat.com>

	* gnu/classpath/Configuration.java.in (default_awt_peer_toolkit):
	Now set by configure.
	* configure.ac (--enable-default-toolkit): New option.
	* NEWS: Document new option.

2005-04-24  Tom Tromey  <tromey@redhat.com>

	* configure.ac: Formatting fixes.

2005-03-22  Mike Stump  <mrs@apple.com>

	* native/fdlibm/ieeefp.h: ppc64 is also __IEEE_BIG_ENDIAN.

2005-04-23  Tom Tromey  <tromey@redhat.com>

	* javax/swing/text/StyleConstants.java (StyleConstants): Now
	package-private.

2005-04-23  Mark Wielaard  <mark@klomp.org>

	* java/net/URL.java (URL(URL,String,URLStreamHandler)): Add spec
	to MalformedURLException.

2005-04-23  Michael Koch  <konqueror@gmx.de>

	* java/net/ServerSocket.java
	(getChannel): Improved javadoc comment.

2005-04-23  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/Document.java:
	Added API documentation comments.

2005-04-23  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/AbstractDocument.java
	(getDocumentProperties): Implemented.
	(setDocumentProperties): Implemented.
	(getProperty): Implemented.
	(putProperty): Implemented.

2005-04-22  Tom Tromey  <tromey@redhat.com>

	* accross.m4: New file, from gcc.
	* configure.ac: Only call AC_C_BIGENDIAN once.  Use a single
	AC_CHECK_HEADERS call for most headers.  Likewise for
	AC_CHECK_FUNCS.  Use AC_COMPILE_CHECK_SIZEOF.  Don't look for
	function named 'sizeof'.

2005-04-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
	(connectSignals): Realize the window widget after connecting
	signals.

2005-04-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/BoxLayout
	(preferredLayoutSize): Fixed computation so that it correctly